# 2023-entries

./: .gitmodules  README.md
prize-1-fpga-gpu-proof/prize-1a-msm/fpga/Yrrid/zprize-2023-submission-fpga/: Cargo.toml  README.md  build.rs  setup_hw.sh
prize-1-fpga-gpu-proof/prize-1a-msm/fpga/Yrrid/zprize-2023-submission-fpga/early-simulation/: BatchCreatorStage.cpp  CollisionQueue.cpp  CollisionQueueActionTable.c  CollisionSim.cpp  DMultiplierStage.cpp  DTreeStage.cpp  DUntreeStage.cpp  DelayStage.cpp  ECStage.cpp  HexReader.cpp  InverterStage.cpp  MSM.cpp  README.md  Simulator.cpp  Simulator.h  SimulatorMain.cpp  Stage.cpp  TreeCopierStage.cpp  Types.h
prize-1-fpga-gpu-proof/prize-1a-msm/fpga/Yrrid/zprize-2023-submission-fpga/early-simulation/core/: BLS12381.cpp  EC.cpp  FF.cpp  Random.cpp  core.h
prize-1-fpga-gpu-proof/prize-1a-msm/fpga/Yrrid/zprize-2023-submission-fpga/fpga/nt_amsm/: CMakeLists.txt
prize-1-fpga-gpu-proof/prize-1a-msm/fpga/Yrrid/zprize-2023-submission-fpga/src/: main.rs
prize-1-fpga-gpu-proof/prize-1a-msm/fpga/Yrrid/zprize-2023-submission-fpga/yrrid-cpu-msm/: HostCurves.cpp  HostFields.cpp
prize-1-fpga-gpu-proof/prize-1a-msm/fpga/Yrrid/zprize-2023-submission-fpga/yrrid-fpga-msm/: Main.cpp
prize-1-fpga-gpu-proof/prize-1a-msm/gpu/Trapdoor_Tech/TrapdoorTech-ZPrize-23-Prize1/Prize 1A/: Cargo.toml  Outline.md
prize-1-fpga-gpu-proof/prize-1a-msm/gpu/Trapdoor_Tech/TrapdoorTech-ZPrize-23-Prize1/Prize 1A/benches/: bench.rs
prize-1-fpga-gpu-proof/prize-1a-msm/gpu/Trapdoor_Tech/TrapdoorTech-ZPrize-23-Prize1/Prize 1A/gpu-bls12-377/: README.md
prize-1-fpga-gpu-proof/prize-1a-msm/gpu/Trapdoor_Tech/TrapdoorTech-ZPrize-23-Prize1/Prize 1A/gpu-bls12-381/: README.md
prize-1-fpga-gpu-proof/prize-1b-e2e/fpga_ponos_submission/1A/sw/ponos-msm-fpga/: Cargo.toml  build.rs
prize-1-fpga-gpu-proof/prize-1b-e2e/fpga_ponos_submission/1A/sw/ponos-msm-fpga/src/: engine.rs  lib.rs
prize-1-fpga-gpu-proof/prize-1b-e2e/fpga_ponos_submission/1B/sw/ponos-engine/: Cargo.toml
prize-1-fpga-gpu-proof/prize-1b-e2e/fpga_ponos_submission/1B/sw/ponos-engine/src/: engine.rs  lib.rs  utils.rs
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/: .gitignore  CMakeLists.txt  README.md  test_fpga.sh  test_gpu.sh  test_stub.sh
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/common/: core.h  ec_impl.h  host.h  host_classes.h  host_ff_conv.cpp  host_ff_defs.h  host_ff_reader.cpp  host_mp.cpp  host_mp_mul.cpp  host_msm.cpp  host_poly.cpp  merkle_accel.h  poseidon.h  types.h
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/merkle_accel_cpu/: CMakeLists.txt
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/merkle_accel_cpu/src/: merkle_accel.cpp  util.h
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/merkle_accel_fpga/: CMakeLists.txt
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/merkle_accel_fpga/src/: merkle_accel.cpp
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/merkle_accel_gpu/src/: BLS12381_fr.cu  MP.cu  MathAPI.cu  Round1.cu  Round4a.cu  Round4b.cu  Round5.cu  asm.cu  local_types.h  merkle_accel.cu  merkle_accel.h
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/merkle_accel_stub/: CMakeLists.txt
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/merkle_accel_stub/src/: merkle_accel.cpp
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/merkle_accel/merkle_accel/test/: local_types.h  test.cpp
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_snarkify_submission/submission/baseline/fpga/addmixed-bindings/: Cargo.toml  Makefile  build.rs
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_trapdoor_submission/Prize 1A/: Cargo.toml
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_trapdoor_submission/Prize 1B/gpu/TrapdoorTech-zprize-ec-gpu-common/: Cargo.toml
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_trapdoor_submission/Prize 1B/gpu/TrapdoorTech-zprize-ec-gpu-common/benches/: msm.rs
prize-1-fpga-gpu-proof/prize-1b-e2e/gpu_trapdoor_submission/Prize 1B/gpu/TrapdoorTech-zprize-ec-gpu-common/src/: kernel.rs  params.rs
prize-1-fpga-gpu-proof/prize-1b-varuna/fpga_ponos_submission/1A/sw/runner/: Cargo.toml
prize-1-fpga-gpu-proof/prize-1b-varuna/gpu_snarkify_submission/merkle_accel/merkle_accel/merkle_accel_gpu/: CMakeLists.txt
prize-1-fpga-gpu-proof/prize-1b-varuna/gpu_snarkify_submission/merkle_accel/merkle_accel/merkle_accel_gpu/src/: Context.h  Montgomery.cu  PowerTable.cu  Round0.cu  Round3.cu  ScanReduce.cu
prize-3-ecdsa-verification/MengLing-L/zprize-ecdsa-varuna/zprize/: Cargo.toml
prize-3-ecdsa-verification/MengLing-L/zprize-ecdsa-varuna/zprize/benches/: bench.rs
prize-3-ecdsa-verification/MengLing-L/zprize-ecdsa-varuna/zprize/src/: api.rs  lib.rs
prize-3-ecdsa-verification/MengLing-L/zprize-ecdsa-varuna/zprize/src/circuit/: message.rs  mod.rs  pubkey.rs  signature.rs  traits.rs
prize-3-ecdsa-verification/MengLing-L/zprize-ecdsa-varuna/zprize/src/circuit/helper/: mod.rs  range_proof.rs
prize-3-ecdsa-verification/MengLing-L/zprize-ecdsa-varuna/zprize/src/circuit/keccak/: hash.rs  mod.rs
prize-3-ecdsa-verification/MengLing-L/zprize-ecdsa-varuna/zprize/src/console/: lookup_table.rs  mod.rs  traits.rs
prize-3-ecdsa-verification/prize-3-test-harness/zprize/: Cargo.toml  README.md
prize-3-ecdsa-verification/prize-3-test-harness/zprize/benches/: bench.rs
prize-3-ecdsa-verification/prize-3-test-harness/zprize/src/: api.rs  circuit.rs  console.rs  lib.rs
prize-3-ecdsa-verification/zproof/zprize-ecdsa-varuna/zprize/: .gitignore  Cargo.toml
prize-3-ecdsa-verification/zproof/zprize-ecdsa-varuna/zprize/benches/: bench.rs
prize-3-ecdsa-verification/zproof/zprize-ecdsa-varuna/zprize/src/: api.rs  circuit.rs  lib.rs
prize-3-ecdsa-verification/zproof/zprize-ecdsa-varuna/zprize/src/r1cs_provider/: builder.rs  deserialize.rs  mod.rs
(+894 files in other folders)
