[package]
name = "zprize-msm-samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
criterion = { version = "0.5.0" }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = { version = "0.10" }
rand_chacha = "0.3.1"
rayon = "1.9"

ark-std = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-bn254  = { version = "0.3.0", default-features = false, features = [ "curve" ] }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.3.0", default-features = false, features = [ "curve" ] }

ec-gpu-common-377 = {path = "./gpu-bls12-377/TrapdoorTech-zprize-ec-gpu-common", package="ec-gpu-common", features = ["bls12_377"]}
crypto-cuda-377 = {path = "./gpu-bls12-377/TrapdoorTech-zprize-crypto-cuda", package="crypto_cuda"}
ec-gpu-common-381 = {path = "./gpu-bls12-381/TrapdoorTech-zprize-ec-gpu-common", package="ec-gpu-common", features = ["bls12_381"]}
crypto-cuda-381 = {path = "./gpu-bls12-381/TrapdoorTech-zprize-crypto-cuda", package="crypto_cuda"}

[[bin]]
name = "zprize-msm-samples"
path = "test_code/src/main.rs"

[[bench]]
name = "bench"
harness = false