[package]
name = "ponos-msm-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ponos-msm-fpga = { path = "../ponos-msm-fpga" }
rayon = "1"
clap = { version = "4.1", features = ["derive"] }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-bn254  = { version = "0.3.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = [ "curve" ] }
rand = { version = "0.8" }
rand_chacha = { version = "0.3" }
