[package]
name = "addmixed-binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ark-ec = { version = "0.3", features = ["std"] }
ark-ff = { version = "0.3", features = ["std"] }
ark-std = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "0.3", features = ["curve"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
#cc = "1.0"
pkg-config = "0.3"
#gcc = "0.3"
